--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,86 @@ node_modules/widest-line/license
 node_modules/wrappy/LICENSE
 node_modules/write-file-atomic/LICENSE
 node_modules/xdg-basedir/license
+node_modules/tar/LICENSE
+*.sh
+node_modules/sqlite3/tools/docker/architecture/linux-arm/Dockerfile
+*.h
+*.cc
+*.node
+node_modules/wide-align/node_modules/ansi-regex/license
+node_modules/node-pre-gyp/bin/node-pre-gyp
+node_modules/node-pre-gyp/node_modules/nopt/LICENSE
+*.md~
+node_modules/.bin/detect-libc
+node_modules/.bin/needle
+node_modules/.bin/rimraf
+node_modules/.bin/node-pre-gyp
+*.patch
+node_modules/core-util-is/LICENSE
+node_modules/console-control-strings/LICENSE
+node_modules/delegates/License
+node_modules/are-we-there-yet/LICENSE
+node_modules/delegates/.npmignore
+node_modules/delegates/.npmignore
+node_modules/detect-libc/.npmignore
+node_modules/detect-libc/.npmignore
+node_modules/delegates/Makefile
+node_modules/fs-minipass/LICENSE
+node_modules/gauge/node_modules/ansi-regex/license
+node_modules/fs.realpath/LICENSE
+node_modules/gauge/LICENSE
+node_modules/gauge/node_modules/strip-ansi/license
+node_modules/gauge/node_modules/is-fullwidth-code-point/license
+node_modules/aproba/LICENSE
+node_modules/gauge/node_modules/string-width/license
+node_modules/inflight/LICENSE
+node_modules/ignore-walk/LICENSE
+node_modules/has-unicode/LICENSE
+node_modules/has-unicode/LICENSE
+node_modules/isarray/Makefile
+node_modules/minipass/LICENSE
+node_modules/detect-libc/LICENSE
+node_modules/minizlib/LICENSE
+node_modules/mkdirp/LICENSE
+node_modules/glob/LICENSE
+node_modules/chownr/LICENSE
+node_modules/isarray/.npmignore
+node_modules/mkdirp/readme.markdown
+node_modules/needle/node_modules/debug/LICENSE
+node_modules/node-pre-gyp/node_modules/.bin/nopt
+node_modules/npm-bundled/LICENSE
+node_modules/npm-packlist/LICENSE
+node_modules/npmlog/LICENSE
+node_modules/number-is-nan/license
+node_modules/object-assign/license
+node_modules/os-homedir/license
+node_modules/os-tmpdir/license
+node_modules/osenv/LICENSE
+node_modules/readable-stream/LICENSE
+node_modules/npm-normalize-package-bin/LICENSE
+node_modules/npm-normalize-package-bin/LICENSE
+node_modules/rimraf/LICENSE
+node_modules/sax/LICENSE
+*.gyp
+*.py
+node_modules/sqlite3/.dockerignore
+*.gypi
+*.gz
+node_modules/sqlite3/Dockerfile
+node_modules/sqlite3/Dockerfile
+node_modules/string_decoder/LICENSE
+node_modules/npm-normalize-package-bin/.npmignore
+node_modules/sqlite3/LICENSE
+node_modules/string_decoder/LICENSE
+node_modules/util-deprecate/LICENSE
+node_modules/wide-align/node_modules/string-width/license
+node_modules/node-pre-gyp/LICENSE
+node_modules/wide-align/node_modules/string-width/license
+node_modules/.bin/mkdirp
+node_modules/path-is-absolute/license
+node_modules/yallist/LICENSE
+node_modules/sqlite3/tools/docker/architecture/linux-arm64/Dockerfile
+node_modules/wide-align/LICENSE
+node_modules/wide-align/node_modules/strip-ansi/license
+node_modules/code-point-at/license
+node_modules/needle/bin/needle
